<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_download_veracini"
    style="@style/general_style"
    tools:context="com.example.utente.musicadivina.DownloadVeracini">

    <TextView
        android:id="@+id/download_instructions"
        style="@style/welcome_two_style"
        android:text="@string/welcome_two" />

    <TextView
        android:id="@+id/selected_song"
        style="@style/title"
        android:layout_below="@+id/station_list_description"
        android:text="@string/v_name_complete" />

    <TextView
        android:id="@+id/album_name"
        style="@style/title_work"
        android:layout_below="@+id/station_list_description"
        android:text="@string/v_work" />

    <ImageView
        android:id="@+id/album"
        style="@style/work_image"
        android:src="@drawable/veracini" />

    <TextView
        android:id="@+id/similar_songs"
        style="@style/title_list"
        android:text="@string/others" />

    <TextView
        android:id="@+id/first_song"
        style="@style/list_item"
        android:text="@string/s_work" />

    <TextView
        android:id="@+id/second_song"
        style="@style/list_item"
        android:text="@string/w_work" />

    <TextView
        android:id="@+id/third_song"
        style="@style/list_item"
        android:text="@string/m_work" />

</LinearLayout>
