<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    style="@style/general_style"
    tools:context="com.example.utente.musicadivina.MainActivity">

    <RelativeLayout style="@style/header_style">

        <TextView
            style="@style/header_first"
            android:text="@string/title_first" />

        <TextView
            style="@style/header_second"
            android:text="@string/title_second" />

        <TextView
            style="@style/welcome_first"
            android:text="@string/welcome" />

    </RelativeLayout>

    <!-- List of Artists -->

    <LinearLayout style="@style/general_style_row">

        <!-- Wilderer -->

        <RelativeLayout
            android:id="@+id/relative"
            style="@style/artist_contest">

            <ImageView
                android:id="@+id/image"
                style="@style/artist_image"
                android:src="@drawable/wilderer" />

            <RelativeLayout
                style="@style/artist_context_text"
                android:layout_below="@+id/image">

                <TextView
                    android:id="@+id/Wilderer"
                    style="@style/artist_text"
                    android:text="@string/w_name" />

            </RelativeLayout>

        </RelativeLayout>

        <!-- Veracini -->

        <RelativeLayout
            android:id="@+id/relative1"
            style="@style/artist_contest">

            <ImageView
                android:id="@+id/image1"
                style="@style/artist_image"
                android:src="@drawable/veracini" />

            <RelativeLayout
                style="@style/artist_context_text"
                android:layout_below="@+id/image1">

                <TextView
                    android:id="@+id/Veracini"
                    style="@style/artist_text"
                    android:text="@string/v_name" />

            </RelativeLayout>

        </RelativeLayout>

    </LinearLayout>

    <!-- End of first Row -->

    <!-- List of Artists -->

    <LinearLayout style="@style/general_style_row">

        <!-- Steffani -->

        <RelativeLayout
            android:id="@+id/relative2"
            style="@style/artist_contest">

            <ImageView
                android:id="@+id/image2"
                style="@style/artist_image"
                android:src="@drawable/steffani" />

            <RelativeLayout
                style="@style/artist_context_text"
                android:layout_below="@+id/image2">

                <TextView
                    android:id="@+id/Steffani"
                    style="@style/artist_text"
                    android:text="@string/s_name" />

            </RelativeLayout>

        </RelativeLayout>

        <!-- Moratelli -->

        <RelativeLayout
            android:id="@+id/relative3"
            style="@style/artist_contest">

            <ImageView
                android:id="@+id/image3"
                style="@style/artist_image"
                android:src="@drawable/moratelli" />

            <RelativeLayout
                style="@style/artist_context_text"
                android:layout_below="@+id/image3">

                <TextView
                    android:id="@+id/Moratelli"
                    style="@style/artist_text"
                    android:text="@string/m_name" />

            </RelativeLayout>

        </RelativeLayout>

    </LinearLayout>

    <!-- End of Second Row -->

    <RelativeLayout style="@style/end_row">

        <TextView
            android:id="@+id/first_song"
            style="@style/explore_style"
            android:text="@string/explore" />

        <ImageButton
            android:id="@+id/addbutton"
            style="@style/button"
            android:background="@drawable/add_button" />

    </RelativeLayout>

</LinearLayout>