<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_steffani_radio"
    style="@style/general_style"
    tools:context="com.example.utente.musicadivina.SteffaniRadio">

    <ImageView
        android:id="@+id/album"
        style="@style/album_image"
        android:src="@drawable/steffani"/>

    <TextView
        android:text="@string/welcome_three"
        style="@style/welcome_three_style"
        />

    <ImageView
        android:id="@+id/musicplayer"
        style="@style/media_player"
        android:src="@drawable/buttons"
        android:layout_below="@id/album"/>

    <TextView
        android:id="@+id/songname"
        style="@style/complete_work_style"
        android:text="@string/s_work_complete"
        android:layout_below="@id/musicplayer"/>

    <TextView
        android:id="@+id/downloadSteffani"
        style="@style/download_link"
        android:layout_below="@id/songname"
        android:text="@string/download"/>

</RelativeLayout>
